--- a/src/api/src/SendPulse.Api/SendPulse.Api.csproj
+++ b/src/api/src/SendPulse.Api/SendPulse.Api.csproj
@@ -12,16 +12,19 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
     <RootNamespace>SendPulse.Api</RootNamespace>
-		<TargetFramework>net6.0</TargetFramework>
-		<TargetFrameworks>net6.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="RestSharp" />
     <PackageReference Include="Newtonsoft.Json" />
     <PackageReference Include="JsonSubTypes" />
-		<PackageReference Include="System.ComponentModel" />
-		<PackageReference Include="System.Xml.XDocument" />
+    <PackageReference Include="System.ComponentModel" />
+    <PackageReference Include="System.ComponentModel.Annotations" />
+    <PackageReference Include="System.Xml.XDocument" />
+    <PackageReference Include="Microsoft.CSharp" VersionOverride="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
